--- a/认识复杂度和简单排序算法.md
+++ b/认识复杂度和简单排序算法.md
@@ -45,3 +45,26 @@
 
 对于一个问题准备两个算法，一个A（需要测试的），一个B（容易想到的，尽量正确的）
 生成很多个随机数组，分别代入A和B，判断两个方法的out是否相等，测他个五十万次，就能说A是正确的。
+
+## 认识递归（求一个数组上的最大值）
+
+### 求中点
+
+$\frac { L + R } { 2 }$ 其实并不是很完美的，如果 $L+R$ 溢出了，那就有问题。
+
+那更优秀的写法是：$L + \frac { R - L } { 2 }$ 
+或者更简化的写法：$L+(R-L)>>1$ 右移一位就相当于/2（更快）
+
+### 递归的时间复杂度估计
+
+master公式：$\left. \begin{array}  { l  }  { T ( N ) = a \times T ( \frac { N } { b } ) } { + O ( N ^ { d } ) } \end{array} \right.$
+第一项的a指的是子问题执行了多少次，第一项的T指的是子问题，第二项指的是除了子问题之外的处理时间
+
+要符合的话需要子问题规模相同
+
+**符合master公式的递归问题，其时间复杂度如下**
+$$
+\log _ { b } a \lt d : O(N^d) \\
+\log _ { b } a \gt d : O(N ^ { \log _ { b } a }) \\
+\log _ { b } a = d : O(N ^ { d } \times \log N)
+$$
